--- a/src/components/TodoContainer/Todo/Todo.module.css
+++ b/src/components/TodoContainer/Todo/Todo.module.css
@@ -26,7 +26,9 @@
   position: absolute;
   width: 100px;
 }
-button {
-  width: 20px;
-  height: 20px;
+.delete{
+  margin: 10px;
+  height: 30px;
+  background-color: rgb(123, 125, 255);
+  border-radius: 10px;
 }
